feature(main): implementacion de login y register con JavaFX